--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,12 +3,12 @@ name: Kubernetes Creation
 on:
     push:
       branches: 
-        - master
+        - main
       paths: 
         - main/**
     pull_request:
       branches: 
-        - master
+        - main
       paths: 
         - main/**
 env:
